Anpassungen an der Datenaufbereitung Analyse der Daten

--- a/baseline_pipeline/source/notebooks/Data Processing.ipynb
+++ b/baseline_pipeline/source/notebooks/Data Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,16 @@
     "        analytics_dict[target_label + '_maxval'] = [maxval]\n",
     "        analytics_dict[target_label + '_total_count'] = [df[df[target_label] > 0].shape[0]]\n",
     "        analytics_dict[target_label + '_maxval_count'] = [df[(df[target_label] == maxval) & (maxval > 0)].shape[0]]\n",
+    "        analytics_dict[target_label + '_100perc_count'] = [df[df[target_label] == 1.0].shape[0]]\n",
     "        analytics_dict[target_label + '_75perc_count'] = [df[df[target_label] > 0.75].shape[0]]\n",
     "        analytics_dict[target_label + '_50perc_count'] = [df[df[target_label] > 0.5].shape[0]]\n",
     "        uniques_df = df.copy()\n",
     "        uniques_df  = uniques_df.drop_duplicates(subset=['token', 'label'])\n",
     "        analytics_dict[target_label + '_total_distinct_count'] = [uniques_df[uniques_df[target_label] > 0].shape[0]]\n",
     "        analytics_dict[target_label + '_maxval_distinct_count'] = [uniques_df[(uniques_df[target_label] == maxval) & (maxval > 0)].shape[0]]\n",
-    "        analytics_dict[target_label + '_75perc_distinct_count'] = [uniques_df[uniques_df[target_label] > 0.75].shape[0]]\n",
-    "        analytics_dict[target_label + '_50perc_distinct_count'] = [uniques_df[uniques_df[target_label] > 0.5].shape[0]               ]\n",
+    "        analytics_dict[target_label + '_100perc_distinct_count'] = [uniques_df[uniques_df[target_label] == 1.0].shape[0]]\n",
+    "        analytics_dict[target_label + '_75perc_distinct_count'] = [uniques_df[uniques_df[target_label] >= 0.75].shape[0]]\n",
+    "        analytics_dict[target_label + '_50perc_distinct_count'] = [uniques_df[uniques_df[target_label] >= 0.5].shape[0]               ]\n",
     "    analytics_df = pd.concat([analytics_df, pd.DataFrame(analytics_dict)], ignore_index = True)\n",
     "    return analytics_df\n",
     "\n",
@@ -89,7 +91,7 @@
     "    for filename in glob.glob(src + '*.parquet'):\n",
     "        printProgressBar(i, total)\n",
     "        i = i+1\n",
-    "        slug = filename.split('/')[-1].split('.')[0]\n",
+    "        slug = filename.split('\\\\')[-1].split('.')[0]\n",
     "        df = pd.read_parquet(filename)\n",
     "        df = label_tokens(df, targets)\n",
     "        analytics_df = collect_analytics(df, analytics_df, targets, slug)\n",
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -117,6 +119,340 @@
    ],
    "source": [
     "process_files(\"../../thirparty/deepform/data/training/\", \"../../data/training/\", targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in glob.glob(\"../../thirparty/deepform/data/training/*.parquet\"):\n",
+    "    df = pd.read_parquet(filename)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>page</th>\n",
+       "      <th>x0</th>\n",
+       "      <th>y0</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>y1</th>\n",
+       "      <th>token</th>\n",
+       "      <th>contract_num</th>\n",
+       "      <th>advertiser</th>\n",
+       "      <th>flight_from</th>\n",
+       "      <th>flight_to</th>\n",
+       "      <th>gross_amount</th>\n",
+       "      <th>tok_id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>digitness</th>\n",
+       "      <th>is_dollar</th>\n",
+       "      <th>log_amount</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>423.000000</td>\n",
+       "      <td>25.174000</td>\n",
+       "      <td>439.447998</td>\n",
+       "      <td>25.216999</td>\n",
+       "      <td>Print</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>441.671997</td>\n",
+       "      <td>25.174000</td>\n",
+       "      <td>458.567993</td>\n",
+       "      <td>25.216999</td>\n",
+       "      <td>Date</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>474.001007</td>\n",
+       "      <td>25.174000</td>\n",
+       "      <td>505.136993</td>\n",
+       "      <td>25.216999</td>\n",
+       "      <td>08/09/12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>533.250977</td>\n",
+       "      <td>25.174000</td>\n",
+       "      <td>551.931030</td>\n",
+       "      <td>25.216999</td>\n",
+       "      <td>Page</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>122.250000</td>\n",
+       "      <td>39.945999</td>\n",
+       "      <td>153.360001</td>\n",
+       "      <td>40.015999</td>\n",
+       "      <td>WCPO</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>786</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3338</th>\n",
+       "      <td>8</td>\n",
+       "      <td>150.001007</td>\n",
+       "      <td>652.109009</td>\n",
+       "      <td>183.768997</td>\n",
+       "      <td>652.145996</td>\n",
+       "      <td>-----S-</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>49</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3339</th>\n",
+       "      <td>8</td>\n",
+       "      <td>258.839996</td>\n",
+       "      <td>652.943970</td>\n",
+       "      <td>294.424011</td>\n",
+       "      <td>652.987000</td>\n",
+       "      <td>$5,500.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.612685</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3340</th>\n",
+       "      <td>8</td>\n",
+       "      <td>319.678986</td>\n",
+       "      <td>652.943970</td>\n",
+       "      <td>335.247009</td>\n",
+       "      <td>652.987000</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3341</th>\n",
+       "      <td>8</td>\n",
+       "      <td>473.250000</td>\n",
+       "      <td>668.867004</td>\n",
+       "      <td>500.480011</td>\n",
+       "      <td>668.921021</td>\n",
+       "      <td>Totals</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3342</th>\n",
+       "      <td>8</td>\n",
+       "      <td>522.719971</td>\n",
+       "      <td>668.867004</td>\n",
+       "      <td>593.679993</td>\n",
+       "      <td>668.921021</td>\n",
+       "      <td>898$576,405.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3343 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      page          x0          y0          x1          y1           token  \\\n",
+       "0        0  423.000000   25.174000  439.447998   25.216999           Print   \n",
+       "1        0  441.671997   25.174000  458.567993   25.216999            Date   \n",
+       "2        0  474.001007   25.174000  505.136993   25.216999        08/09/12   \n",
+       "3        0  533.250977   25.174000  551.931030   25.216999            Page   \n",
+       "4        0  122.250000   39.945999  153.360001   40.015999            WCPO   \n",
+       "...    ...         ...         ...         ...         ...             ...   \n",
+       "3338     8  150.001007  652.109009  183.768997  652.145996         -----S-   \n",
+       "3339     8  258.839996  652.943970  294.424011  652.987000       $5,500.00   \n",
+       "3340     8  319.678986  652.943970  335.247009  652.987000            0.00   \n",
+       "3341     8  473.250000  668.867004  500.480011  668.921021          Totals   \n",
+       "3342     8  522.719971  668.867004  593.679993  668.921021  898$576,405.00   \n",
+       "\n",
+       "      contract_num  advertiser  flight_from  flight_to  gross_amount  tok_id  \\\n",
+       "0              0.0        0.25          0.0        0.0          0.00      37   \n",
+       "1              0.0        0.25          0.0        0.0          0.00       8   \n",
+       "2              0.0        0.19          0.0        0.0          0.00       0   \n",
+       "3              0.0        0.21          0.0        0.0          0.00       7   \n",
+       "4              0.0        0.44          0.0        0.0          0.00     786   \n",
+       "...            ...         ...          ...        ...           ...     ...   \n",
+       "3338           0.0        0.05          0.0        0.0          0.00      49   \n",
+       "3339           0.0        0.12          0.0        0.0          0.62       0   \n",
+       "3340           0.0        0.16          0.0        0.0          0.62       0   \n",
+       "3341           0.0        0.19          0.0        0.0          0.00      30   \n",
+       "3342           0.0        0.00          0.0        0.0          0.86       0   \n",
+       "\n",
+       "      length  digitness  is_dollar  log_amount  label  \n",
+       "0          5   0.000000        0.0    0.000000      4  \n",
+       "1          4   0.000000        0.0    0.000000      4  \n",
+       "2          8   0.750000        0.0    0.000000      4  \n",
+       "3          4   0.000000        0.0    0.000000      4  \n",
+       "4          4   0.000000        0.0    0.000000      4  \n",
+       "...      ...        ...        ...         ...    ...  \n",
+       "3338       7   0.000000        0.0    0.000000      4  \n",
+       "3339       9   0.666667        1.0    8.612685      4  \n",
+       "3340       4   0.750000        1.0    0.000000      4  \n",
+       "3341       6   0.000000        0.0    0.000000      4  \n",
+       "3342      14   0.785714        0.0    0.000000      4  \n",
+       "\n",
+       "[3343 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -143,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6rc1"
   }
  },
  "nbformat": 4,
