>>Modified: ProPublica Ordner umbenannt >>Modified: Pfade in ProPublica Notebooks angepasst >>Added: ein paar Kommentare in ProPublica Notebooks

--- a/notebooks/ProPublica/Data Processing.ipynb
+++ b/notebooks/ProPublica/Data Processing.ipynb
@@ -2,49 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = ['contract_num', 'advertiser', 'flight_from', 'flight_to', 'gross_amount']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def printProgressBar (iteration, total, prefix = '', suffix = '', decimals = 1, length = 100, fill = '█', printEnd = \"\\r\"):\n",
-    "    \"\"\"\n",
-    "    Call in a loop to create terminal progress bar\n",
-    "    @params:\n",
-    "        iteration   - Required  : current iteration (Int)\n",
-    "        total       - Required  : total iterations (Int)\n",
-    "        prefix      - Optional  : prefix string (Str)\n",
-    "        suffix      - Optional  : suffix string (Str)\n",
-    "        decimals    - Optional  : positive number of decimals in percent complete (Int)\n",
-    "        length      - Optional  : character length of bar (Int)\n",
-    "        fill        - Optional  : bar fill character (Str)\n",
-    "        printEnd    - Optional  : end character (e.g. \"\\r\", \"\\r\\n\") (Str)\n",
-    "    \"\"\"\n",
-    "    percent = (\"{0:.\" + str(decimals) + \"f}\").format(100 * (iteration / float(total)))\n",
-    "    filledLength = int(length * iteration // total)\n",
-    "    bar = fill * filledLength + '-' * (length - filledLength)\n",
-    "    print(f'\\r{prefix} |{bar}| {percent}% {suffix}', end = printEnd)\n",
-    "    # Print New Line on Complete\n",
-    "    if iteration == total: \n",
-    "        print()"
+    "import pandas as pd\n",
+    "import glob\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = ['contract_num', 'advertiser', 'flight_from', 'flight_to', 'gross_amount']"
    ]
   },
   {
@@ -68,6 +41,10 @@
     "    analytics_dict['token_count'] = [df.shape[0]]\n",
     "    for target_label in target_labels:\n",
     "        maxval = df[target_label].max() \n",
+    "        # Each token is labele with a \"probability\" of belonging to a certain entity. \n",
+    "        # This quantification aims to get a better overview over the data and how it is labeled\n",
+    "        # ie maxval tells us, how many labels have the highest probability to be part of a certain entity\n",
+    "        # total_count tells us how many tokens have a prob > 0, 100perc tells us how many of them have a prob of 100% etc.\n",
     "        analytics_dict[target_label + '_maxval'] = [maxval]\n",
     "        analytics_dict[target_label + '_total_count'] = [df[df[target_label] > 0].shape[0]]\n",
     "        analytics_dict[target_label + '_maxval_count'] = [df[(df[target_label] == maxval) & (maxval > 0)].shape[0]]\n",
@@ -86,17 +63,14 @@
     "\n",
     "def process_files(src, dest, targets):\n",
     "    analytics_df = pd.DataFrame()\n",
-    "    i = 0\n",
     "    total = len(glob.glob(src + '*.parquet'))\n",
-    "    for filename in glob.glob(src + '*.parquet'):\n",
-    "        printProgressBar(i, total)\n",
-    "        i = i+1\n",
+    "    for filename in tqdm(glob.glob(src + '*.parquet')):\n",
     "        slug = filename.split('\\\\')[-1].split('.')[0]\n",
     "        df = pd.read_parquet(filename)\n",
     "        df = label_tokens(df, targets)\n",
     "        analytics_df = collect_analytics(df, analytics_df, targets, slug)\n",
     "        df.to_csv(dest + slug + '.tsv', '\\t')\n",
-    "    analytics_df.to_csv('../../data/data_analytics.tsv', '\\t')\n",
+    "    analytics_df.to_csv('../../data/ProPublica/data_analytics.tsv', '\\t')\n",
     "    print('\\r')\n",
     "    print('Processed ' + str(i) + ' out of ' + str(total) + ' files')"
    ]
@@ -118,23 +92,12 @@
     }
    ],
    "source": [
-    "process_files(\"../../thirparty/deepform/data/training/\", \"../../data/training/\", targets)"
+    "process_files(\"../../src/pro_publica_analysis/thirparty/deepform/data/training/\", \"../../data/ProPublica/training/\", targets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for filename in glob.glob(\"../../thirparty/deepform/data/training/*.parquet\"):\n",
-    "    df = pd.read_parquet(filename)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +308,7 @@
        "      <td>652.943970</td>\n",
        "      <td>335.247009</td>\n",
        "      <td>652.987000</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.16</td>\n",
        "      <td>0.0</td>\n",
@@ -413,7 +376,7 @@
        "...    ...         ...         ...         ...         ...             ...   \n",
        "3338     8  150.001007  652.109009  183.768997  652.145996         -----S-   \n",
        "3339     8  258.839996  652.943970  294.424011  652.987000       $5,500.00   \n",
-       "3340     8  319.678986  652.943970  335.247009  652.987000            0.00   \n",
+       "3340     8  319.678986  652.943970  335.247009  652.987000             0.0   \n",
        "3341     8  473.250000  668.867004  500.480011  668.921021          Totals   \n",
        "3342     8  522.719971  668.867004  593.679993  668.921021  898$576,405.00   \n",
        "\n",
@@ -446,13 +409,13 @@
        "[3343 rows x 17 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "pd.read_parquet(glob.glob(\"../../src/pro_publica_analysis/thirparty/deepform/data/training/*.parquet\")[0])"
    ]
   },
   {
